# whetstone

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  spec.history.md  spec.md
contracts/schemas/: apply_back_report.schema.json  artifact_validation_error.schema.json  client_telemetry.schema.json  common.schema.json  config_validation_error.schema.json  conflict_report.schema.json  contract_surface_report.schema.json  convergence_failure_report.schema.json  decision_intervention_request.schema.json  decision_points.schema.json  decision_register.schema.json  decision_summary.schema.json  editor_summary.codex.schema.json  editor_summary.schema.json  operator_decision_checkpoint.schema.json  operator_decision_checkpoint_summary.schema.json  oscillation_report.schema.json  phase2_reviewer_feedback.schema.json  phase2_reviewer_feedback_input.codex.schema.json  (+8 more)
docs/: OPERATOR_QUICKSTART.md  SCOPE_NOTES_GUIDE.md  TWO_STAGE_REVIEW_PIPELINE_SPEC.md
notes/: future-improvements.md
rubrics/: exploratory-v1.md  governance-v6.md  mvp-v1.md  standard-v1.md
tests/: test_apply_back.py  test_artifacts.py  test_cli.py  test_clients.py  test_config.py  test_conflicts.py  test_contracts.py  test_decisions.py  test_declaration.py  test_engine.py  test_evaluation.py  test_hashing.py  test_identity.py  test_live.py  test_live_phase1.py  test_live_phase2.py  test_oscillation.py  test_prompts.py  test_reports.py  test_resume.py  test_rubrics.py  test_runner.py  test_scheduler.py  test_sections.py  test_status.py  test_termination.py  test_versioning.py
(+242 files in other folders)
