[project]
name = "whetstone"
version = "0.1.0"
description = "Deterministic AI spec convergence orchestrator."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
whetstone = "whetstone.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
